Aplicando css do menu

--- a/src/view/App/App.scss
+++ b/src/view/App/App.scss
@@ -19,4 +19,10 @@ a {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.content {
+  width: 100%;
 }
