--- a/src/common/Header/Header.scss
+++ b/src/common/Header/Header.scss
@@ -3,8 +3,12 @@ header {
   display: flex;
   align-items: center;
   padding: 10px 0;
-  margin-bottom: 25px;
+  margin: 0;
   border-bottom: 0.5px solid #efefef;
+
+  @media (min-width: 768px) {
+    margin-bottom: 25px;
+  }
 
   img {
     width: 160px;
