--- a/src/view/Page1/Page1.scss
+++ b/src/view/Page1/Page1.scss
@@ -2,17 +2,28 @@ $shadow: 0 3px 8px 0 rgba(62, 100, 146, 0.16);
 
 .chart {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
+
+  @media (min-width: 768px) {
+    justify-content: space-around;
+    flex-direction: row;
+  }
 
   .row {
     background: #FFFFFF;
     border: 1px solid #D8DDE6;
     border-radius: 4px;
     box-shadow: $shadow;
-    width: 40%;
+    width: 85%;
     padding: 15px;
+    margin-bottom: 30px;
     min-height: 290px;
+
+    @media (min-width: 768px) {
+      margin: 0;
+      width: 40%;
+    }
 
     strong {
       color: #035A27;
@@ -21,7 +32,7 @@ $shadow: 0 3px 8px 0 rgba(62, 100, 146, 0.16);
       font-size: 14px;
       line-height: 20px;
       text-transform: uppercase;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
   }
 
