--- a/src/common/MenuLateral/MenuLateral.scss
+++ b/src/common/MenuLateral/MenuLateral.scss
@@ -1,5 +1,7 @@
+@import '../../assets/css/variables.scss';
+
 .menu {
-  background: linear-gradient(180deg, #000000 0%, #B5B5B5 100%);
+  background: linear-gradient(180deg, $black-color 0%, $light-gray-color 100%);
   width: 100%;
 
   @media (min-width: 768px) {
@@ -36,7 +38,7 @@
       }
 
       span {
-        color: #fff;
+        color: $white-color;
         font-size: 15px;
         line-height: 25px;
         display: flex;
@@ -45,7 +47,7 @@
 
       a {
         border: 0;
-        color: #fff;
+        color: $white-color;
         display: flex;
         align-items: center;
         justify-content: center;
